<resources>
    <string name="app_name">AttendenceApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_80_percent_of_success_n_is_showing_up">80 Percent of Success \n is Showing Up.</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="we_have_sent_a_6_digit_otp">We have sent a 6 digit OTP</string>
    <string name="resend_otp">resend otp</string>
    <string name="verify">Verify</string>
    <string name="login">Login</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="mobile_number">Mobile number</string>
    <string name="_91">+91</string>
    <string name="you_will_get_a_otp_on_this_number">you will get a otp on this number</string>
    <string name="get_otp">Get OTP</string>
    <string-array name="Roll_Numbers">
        <item>Roll Numbers</item>
        <item>S20200020240</item>
        <item>S20200020241</item>
        <item>S20200020242</item>
        <item>S20200020243</item>
        <item>S20200020244</item>
        <item>S20200020245</item>
        <item>S20200020246</item>
        <item>S20200020247</item>
        <item>S20200020248</item>
        <item>S20200020249</item>
        <item>S20200020250</item>
        <item>S20200020251</item>
        <item>S20200020252</item>
        <item>S20200020253</item>


    </string-array>
</resources>