<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.EnterphoneFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_design"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/login"
            android:textColor="@color/fontcolour"
            android:textSize="38dp" />

        <TextView
            android:id="@+id/login_enter_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="26dp"
            android:text="@string/enter_your_mobile_number"
            android:textColor="@color/fontcolourgrey"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_text"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/login_mobile_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="32dp"
            android:text="@string/mobile_number"
            android:textColor="@color/fontcolourgrey"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_enter_phone"
            tools:ignore="RtlHardcoded" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/login_input_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="#F8F5FD"
            app:cardCornerRadius="7dp"
            app:cardElevation="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_mobile_number"
            app:strokeColor="@color/fontcolour"
            app:strokeWidth="2dp"
            tools:ignore="RtlHardcoded">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/_91"
                    android:textColor="@color/fontcolourgrey"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/edit_number"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="true"
                    android:background="@null"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:padding="4dp"
                    android:textColor="@color/fontcolourgrey"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="1234567890" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/login_otp_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="16dp"
            android:text="@string/you_will_get_a_otp_on_this_number"
            android:textColor="@color/fontcolourgrey"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_input_card"
            tools:ignore="RtlHardcoded" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/verify_button"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:enabled="false"
        android:padding="16dp"
        android:textAllCaps="false"
        android:text="@string/get_otp"
        android:textSize="22sp"
        android:textStyle="bold"
        app:cornerRadius="84dp"
        app:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.782" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_bg"
        android:progress="0"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>